@@ -1,34 +1,16 @@
-#FROM gradle:4.10.0-jdk8-alpine AS build
-#COPY --chown=gradle:gradle . /home/gradle/src
-#WORKDIR /home/gradle/src
-#RUN gradle clean build --no-daemon
-#
-#FROM openjdk:8-jre-slim
-#
-#EXPOSE 8181
-#
-#RUN mkdir /app
-#
-#COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-#
-#ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
 
-
-# Start with a base image containing Java runtime
 FROM openjdk:8-jdk-alpine
-
+WORKDIR /Users/crpavel/Documents/DocumentosMacBookProPavel/Projects/docker/Person
 
 # Add a volume pointing to /tmp
 VOLUME /tmp
 
-# Make port 8080 available to the world outside this container
-EXPOSE 8181
-
 # The application's jar file
-ARG JAR_FILE=build/libs/Person-0.0.1-SNAPSHOT.jar
+#ARG JAR_FILE=build/libs/Person-0.0.1-SNAPSHOT.jar
+#RUN mkdir -p build/libs/dependency && (cd build/libs/dependency; jar -xf ../*.jar)
 
-# Add the application's jar to the container
-ADD ${JAR_FILE} app.jar
-
-# Run the jar file
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ARG DEPENDENCY=/Users/crpavel/Documents/DocumentosMacBookProPavel/Projects/docker/Person/build/libs/dependency
+COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
+COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
+COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
+ENTRYPOINT ["java","-cp","app:app/lib/*","com.pavel.test.Person.PersonApplication"]
